use popper to prevent the emoji picker to be cut off

--- a/src/features/emojiPicker.css
+++ b/src/features/emojiPicker.css
@@ -519,30 +519,6 @@ html.dark .btd-loaded {
 }
 
 /**
- * Custom styles to make it work better on smaller screens.
- */
-@media (max-height: 800px) {
-  .emoji-mart-scroll {
-    height: 170px !important;
-  }
-
-  .emoji-mart-preview {
-    height: 50px !important;
-  }
-}
-
-@media (max-height: 600px) {
-  .emoji-mart-scroll {
-    height: 120px !important;
-  }
-
-  .emoji-mart-preview {
-    display: none !important;
-    height: 50px !important;
-  }
-}
-
-/**
  * No need for the emoticon preview ¯\(ツ)/¯ 
  */
 .emoji-mart-preview-emoticon {
